dom styling changes

--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 </head>
 
 <body>
-    <h1>Todo</h1>
+    <h1 style="color: white; font-size: 50px">Code Tasks</h1>
     <form id="form">
 
-        <label id="label1">Add to your todo list!</label>
+        <label style="color: white; font-size: 30px" id="label1">Add items to your list!</label>
         <br>
         <input id="input1" type="text">
         <br>
@@ -23,10 +23,8 @@
         <br>
     </form>
     <br>
-    <!-- <ul>
-
-
-    </ul> -->
+  
+    <!-- Notice how I dont have any ul or div tags -->
     
 
     <script src="main.js"></script>
